Adds skills and relations

--- a/Csharp/SkillsetGenerator/SkillsetGenerator.csproj
+++ b/Csharp/SkillsetGenerator/SkillsetGenerator.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="Relation.cs" />
+    <Compile Include="Skill.cs" />
     <Compile Include="Grid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
