--- a/Csharp/SkillsetGenerator/SkillsetGenerator.csproj
+++ b/Csharp/SkillsetGenerator/SkillsetGenerator.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Cell.cs" />
     <Compile Include="Relation.cs" />
+    <Compile Include="GridManager.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="Grid.cs" />
     <Compile Include="Program.cs" />
